refactor: 테스트 통과하도록 리팩터링
Co-authored-by:cheche903<cheche903@naver.com>